[package]
name = "perseverance"
version = "0.1.0"
authors = ["oscrim <oscar@widefind.se>"]
edition = "2018"
license = "MIT"
description = "Rust trait for persistant types"
readme = "README.md"
repository = "https://github.com/oscrim/perseverance"

[lib]
name = "perseverance"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0" , features = ["derive", "rc"]}
json = "0.12.1"
serde_json="1.0"