[package]
name = "perseverance"
version = "0.1.3-alpha.0"
authors = ["oscrim <oscar@widefind.se>"]
edition = "2018"
license = "MIT"
description = "Rust trait for persistant types"
readme = "README.md"
repository = "https://github.com/oscrim/perseverance"

[lib]
name = "perseverance"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0" , features = ["derive", "rc"], optional = true}
json = {version = "0.12.1", optional = true}
serde_json= {version = "1.0", optional = true}

[features]
types = ['serde', 'json', 'serde_json']
